# kuaigeyun

./: .cursorrules  .editorconfig  .gitignore  .gitmessage  LICENSE  Launch.dev.sh  Launch.sh  NOTICE  README.md  START_GUIDE.md  TEST_README.md  UMI_VERSION_LOCK.md  UNIVER_EDITOR_FIX.md  backup_project.sh  check-health.sh  check_api_health.py  clean-temp.sh  cleanup_test_users.py  create_kuaizhizao_app.py  debug_password_issue.py  demo_test.py  docker-compose.prod.env.example  docker-compose.prod.yml  factory_pages_uniformity_report.md  fast-start.sh  fix_proformselect.py  init_apps.sql  menu_display_check_report.md  menu_translation_optimization.md  menu_unification_final_report.md  optimize_menu_loading.py  platform_status_check.md  project_health_report.json  read_excel.py  replace_proformselect.sh  simple_password_test.py  simple_user_test.py  start-all.sh  sync_app_manifest.py  test-all-api-routes.py  (+7 more)
riveredge-backend/: .dockerignore  .env.backup  .env.example  .flake8  .pylintrc  =23.2.1  Dockerfile  Untitled  aerich_config.py  api-routes-test-results.json  check_apps.py  check_menu_db.py  check_migrations.py  check_table_structure.py  check_tables.py  debug_app_registration.py  debug_imports.py  debug_module_imports.py  docker-entrypoint.sh  ensure_operation_defect_types_table.py  fix_sales_delivery_demand_id.sql  fix_updated_at_fields.py  list_inngest_fns.py  module-test-results.json  pyproject.toml  recreate_aerich.py  reproduce_error.py  requirements.txt  reset_migrations.py  sales-order-test-results.json  start-backend.sh  test-api-routes.py  test_dynamic_config.py  test_inngest.py  update_inngest_env.py
riveredge-backend/migrations/: README_Aerich使用说明.md  README_数据源统一迁移顺序.md  README_迁移初始化指南.md  __init__.py  add_process_route_fields.sql  aerich_config.py  apply_change_default_operator_to_json.py  apply_data_sources_to_integration_configs_migration.py  apply_demand_computation_tables_migration.py  apply_demand_ids_migration.py  apply_login_fields_migration.py  apply_login_fields_update_migration.py  apply_migration_manually.py  apply_operation_defect_types_migration.py  apply_partial_unique_indexes_migration.py  apply_platform_settings_migration.py  apply_purchase_requisition_migration.py  apply_sync_operations_sequence_migration.py  apply_warehouse_line_side_migration.py  check_all_missing_fields.py  check_cost_calculation_table.py  check_cost_rule_table.py  check_document_node_timings_table.py  check_migration_chain.py  check_migration_status.py  check_unmigrated_models.py  execute_calculation_no_migration.py  execute_calculation_status_migration.py  execute_description_migration.py  execute_duration_hours_migration.py  execute_manufacturing_cost_migration.py  execute_material_code_rule_migration.py  execute_material_defaults_migration.py  execute_material_type_nullable_migration.py  execute_migration.py  execute_missing_fields_migration.py  execute_node_code_migration.py  execute_operation_fields_migration.py  execute_process_route_sub_route_migration.py  execute_process_route_template_migration.py  (+14 more)
riveredge-backend/migrations/archive_backup_20251227_132407/: 11_20250102140000_create_data_sources.py  25_20250103000000_create_operation_logs.py  30_20250104_rename_indexes_and_constraints.py  (+5 more)
riveredge-backend/scripts/: FIX_PORT_9000_ERROR.md  INNGEST_TEST_README.md  QUICK_MIGRATION.md  README_项目健康检测.md  add_file_headers.py  add_traceability_permission.py  analyze_master_data.py  app_status_report.md  app_status_report_final.md  apply_crm_migration.py  apply_data_dictionary_migration.py  apply_eam_migration.py  apply_pdm_migration.py  apply_simple_migration.py  apply_tree_root_migration_aerich.py  check_aerich_migrations.py  check_all_app_menus.py  check_all_apps.py  check_all_apps_menu_translations.py  check_all_warehouse_menus.py  check_api_endpoints.py  check_apps_status.py  check_code_rules.py  check_db_tables.py  check_dependencies_field.py  check_kuaizhizao_menus.py  check_master_data_migration.py  check_master_data_rules.py  check_menu.py  check_menu_translations.py  check_migration_status.py  check_migrations.py  check_orphaned_menus.py  check_password.py  check_port_9000.py  check_project_health.py  check_routes.py  check_sales_delivery_fields.py  check_sales_order_status.py  check_table_and_fields.py  (+120 more)
riveredge-backend/src/: analyze.py  analyze_out.txt  setup_orm_out.txt  setup_orm_out2.txt  setup_orm_out3.txt  setup_out.txt  setup_out2.txt  setup_sandbox.py  setup_sandbox_orm.py  verify_kuaizhizao_import.py
riveredge-backend/tests/: conftest.py  test_business_document_flows.py  test_business_flow_integration.py
riveredge-core/: .gitconfig.sh  .gitignore  README.md  pyproject.toml  requirements.txt  start-backend.sh
riveredge-core/scripts/: check_db.py  check_imports.py  check_tables.py  check_users.py  create_tables.py  deploy.sh  execute_rename_sql.py  init_default_tenant.py  init_users.py  make_email_optional.py  make_email_optional.sql  migrate_superadmin.py  rename_m2m_tables.py  reset_and_init.py  restart_backend.py  start_backend.py  test_api_endpoints.py  test_login.py  test_login_api.py  test_postgres_sync.py  test_superadmin_manual.py  verify_superadmin_table.py
riveredge-core/src/: pyproject.toml
riveredge-core/tests/: __init__.py  test_auth_api.py  test_auth_service.py  test_database.py  test_environment.py  test_summary.md  test_superadmin_api.py  test_tenant_api.py  test_tenant_isolation.py  test_tenant_service.py
riveredge-core/venv311/: pyvenv.cfg
riveredge-root/: =0.51.0  README.md  pyproject.toml  requirements.txt  start-backend.sh  start-uvicorn.sh
riveredge-root/scripts/: check_postgres.py  check_versions.py  create_saved_search_table.py  create_saved_search_table.sql  create_tables.py  deploy.sh  monitor_system.py  rename_m2m_columns.py  reset_and_init.py  start_backend.py  start_uvicorn.py  test_db_config.py  test_login.py  test_models_after_rename.py
riveredge-root/src/: __init__.py
riveredge-root/tests/: test_auth_service.py  test_database.py  test_redis.py  test_summary.md  test_tenant_service.py
(+4391 files in other folders)
