[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riveredge-backend"
version = "1.0.0"
description = "RiverEdge SaaS 多组织框架 - 后端 Monorepo"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",  # 第一阶段升级：0.104.1 → 0.115.0+
    "uvicorn[standard]>=0.32.0,<0.33.0",  # 第一阶段升级：0.30.0 → 0.32.0+
    "pydantic>=2.9.0,<2.10.0",  # 第一阶段升级：2.8.0 → 2.9.0+
    "pydantic-settings>=2.6.0,<2.7.0",  # 第一阶段升级：2.5.0 → 2.6.0+
    "tortoise-orm==0.20.1",  # 保持当前版本，第二阶段升级
    "aerich==0.7.1",  # 保持当前版本，第二阶段升级
    "asyncpg==0.29.0",  # 保持当前版本，第二阶段升级
    "psycopg2-binary==2.9.9",  # 保持当前版本，第二阶段升级
    "redis[hiredis]==5.0.1",  # 保持当前版本，第二阶段升级
    "python-jose[cryptography]==3.3.0",
    "httpx>=0.27.0,<0.28.0",  # 第一阶段升级：0.25.2 → 0.27.0+
    "loguru>=0.7.3,<0.8.0",  # 第一阶段升级：0.7.2 → 0.7.3+
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "psutil==5.9.8",  # 保持当前版本，需要谨慎升级
    "python-dotenv>=1.0.0",
    "pypinyin>=0.51.0",
    "aiofiles>=23.2.1",  # 第三阶段：文件管理 - 异步文件操作库
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | venv311
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"

[tool.aerich]
tortoise_orm = "soil.infrastructure.database.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
